# fosdem-video-downloader

./: .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  IMAGE_PROMPTS.md  README.md  fosdem_video.py  pyproject.toml
.opencode/command/: openspec-apply.md  openspec-archive.md  openspec-proposal.md
fosdem_video/: __init__.py  __main__.py  cli.py  discovery.py  download.py  images.py  models.py  nfo.py
openspec/: AGENTS.md  project.md
openspec/changes/add-jellyfin-images/: design.md  proposal.md  tasks.md
openspec/changes/add-jellyfin-images/specs/video-download/: spec.md
openspec/changes/add-jellyfin-metadata/: tasks.md
openspec/changes/add-jellyfin-metadata/specs/cli-interface/: spec.md
openspec/changes/add-jellyfin-metadata/specs/video-download/: spec.md
openspec/changes/add-testing-suite/: design.md  proposal.md  tasks.md
openspec/changes/add-testing-suite/specs/integration-testing/: spec.md
openspec/changes/add-testing-suite/specs/unit-testing/: spec.md
openspec/changes/archive/2026-02-09-add-jellyfin-images/: design.md  tasks.md
openspec/changes/archive/2026-02-09-add-jellyfin-images/specs/video-download/: spec.md
openspec/changes/archive/2026-02-09-add-jellyfin-metadata/: proposal.md  tasks.md
openspec/changes/archive/2026-02-09-add-jellyfin-metadata/specs/cli-interface/: spec.md
openspec/changes/archive/2026-02-09-add-jellyfin-metadata/specs/video-download/: spec.md
openspec/changes/archive/2026-02-09-refactor-cli-options/: proposal.md  tasks.md
openspec/changes/archive/2026-02-09-refactor-cli-options/specs/cli-interface/: spec.md
openspec/changes/archive/2026-02-09-refactor-cli-options/specs/video-download/: spec.md
openspec/changes/refactor-cli-options/: proposal.md  tasks.md
openspec/changes/refactor-cli-options/specs/cli-interface/: spec.md
openspec/changes/refactor-cli-options/specs/video-download/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/video-download/: spec.md
tests/: conftest.py
tests/integration/: test_workflows.py
tests/unit/: test_cli.py  test_discovery.py  test_download.py  test_images.py  test_models.py  test_nfo.py
