[project]
name = "fosdem-video-downloader"
version = "0.1.0"
description = "A tool to download videos from FOSDEM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "icalendar>=5.0.0",
  "requests>=2.31.0",
  "python-dateutil>=2.8.2",
]

[project.scripts]
fosdem-video = "fosdem_video.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fosdem_video"]

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "typing" }, { include-group = "test" }]
test = ["pytest>=8.0.0", "pytest-cov>=6.0.0", "responses>=0.25.0"]
lint = ["black>=24.9.0", "isort>=5.12.0", "ruff>=0.11.10"]
typing = [
  "ty>=0.0.14",
  "types-requests>=2.31.0",
  "types-python-dateutil>=2.8.19",
]

[tool.black]
line-length = 90

[tool.isort]
line_length = 90
profile = "black"

[tool.ty.rules]
possibly-missing-import = "error"
unused-ignore-comment = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (isolated function behaviour)",
    "integration: Integration tests (cross-module workflows)",
]

[tool.coverage.run]
source = ["fosdem_video"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D203",   # 1 blank line required before class docstring
  "D205",   # 1 blank line required between summary line and description
  "D212",   # Multi-line docstring summary should start at the first line
  "FIX002", # Line contains TODO, consider resolving or converting to issue
  "TD003",  # Missing issue link on TODO comment
  "TRY003", # Avoid specifying long messages outside exception class - acceptable for CLI
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # Use of assert — expected in tests
  "D100",    # Missing module docstring
  "D102",    # Missing docstring in public method
  "D104",    # Missing docstring in public package
  "PLR2004", # Magic value used in comparison
  "TC003",   # Move stdlib import into TYPE_CHECKING block
  "ARG002",  # Unused method argument (pytest fixtures)
  "PT019",   # Fixture without value injected as parameter
]
"tests/conftest.py" = [
  "PLR0913", # Too many arguments (factory helper)
]
